フォーム送信ボタンのアニメーション実装

--- a/html-kaguya/contact/index.html
+++ b/html-kaguya/contact/index.html
@@ -27,19 +27,21 @@
           />
         </h1>
         <!-- ハンバーガーメニュー -->
-        <div class="navToggle">
-          <span></span><span></span><span></span>
-        </div>
+        <div class="navToggle"><span></span><span></span><span></span></div>
         <nav class="header-nav">
-        <ul>
-          <!--  float  -->
-          <li><a href="../index.html" class="page-transition">HOME</a></li>
-          <li><a href="../news/index.html" class="page-transition">NEWS</a></li>
-          <li>
-            <a href="../recruit/index.html" class="page-transition">RECRUIT</a>
-          </li>
-          <li><a href="index.html">CONTACT</a></li>
-        </ul>
+          <ul>
+            <!--  float  -->
+            <li><a href="../index.html" class="page-transition">HOME</a></li>
+            <li>
+              <a href="../news/index.html" class="page-transition">NEWS</a>
+            </li>
+            <li>
+              <a href="../recruit/index.html" class="page-transition"
+                >RECRUIT</a
+              >
+            </li>
+            <li><a href="index.html">CONTACT</a></li>
+          </ul>
         </nav>
       </section>
     </header>
@@ -65,7 +67,13 @@
           <p><input type="email" placeholder="メールアドレス" /></p>
           <p><textarea placeholder="お問い合わせ内容"></textarea></p>
           <p class="submit-p">
-            <input type="submit" value="SEND" id="submit" name="submit" />
+            <input
+              type="submit"
+              value="SEND"
+              id="submit"
+              name="submit"
+              class="submit"
+            />
           </p>
         </form>
       </div>
@@ -86,17 +94,19 @@
           </a>
         </div>
         <nav class="footer-nav">
-        <ul>
-          <!--  float  -->
-          <li><a href="../index.html" class="page-transition">HOME</a></li>
-          <li class="padleft-nav">
-            <a href="../news/index.html" class="page-transition">NEWS</a>
-          </li>
-          <li class="padleft-nav">
-            <a href="../recruit/index.html" class="page-transition">RECRUIT</a>
-          </li>
-          <li class="padleft-nav">CONTACT</li>
-        </ul>
+          <ul>
+            <!--  float  -->
+            <li><a href="../index.html" class="page-transition">HOME</a></li>
+            <li class="padleft-nav">
+              <a href="../news/index.html" class="page-transition">NEWS</a>
+            </li>
+            <li class="padleft-nav">
+              <a href="../recruit/index.html" class="page-transition"
+                >RECRUIT</a
+              >
+            </li>
+            <li class="padleft-nav">CONTACT</li>
+          </ul>
         </nav>
       </div>
       <div class="copyright">
