news画像ホバー時のスライドイン動作の実装

--- a/html-kaguya/index.html
+++ b/html-kaguya/index.html
@@ -78,16 +78,15 @@
             <!--  backgroud-image,float  -->
             <li class="news1">
               <p>アームストロングのカウチ入荷</p>
+              <div class="news-background"></div>
             </li>
             <li class="news2">
-              <span class="news-background"
-                ><p>アームストロングのチェア再入荷</p></span
-              >
+              <p>アームストロングのチェア再入荷</p>
+              <div class="news-background"></div>
             </li>
             <li class="news3">
-              <span class="news-background"
-                ><p>アームストロングのテーブル入荷</p></span
-              >
+              <p>アームストロングのテーブル入荷</p>
+              <div class="news-background"></div>
             </li>
           </ul>
           <a href="news/index.html" class="page-transition">view more</a>
