contactフォーム部分の送信ボタンアニメーション実装

--- a/html-kaguya/contact/index.html
+++ b/html-kaguya/contact/index.html
@@ -62,7 +62,12 @@
         <section class="contact-title-sp">
           <h3>CONTACT</h3>
         </section>
-        <form action="#" method="POST" id="contact-form">
+        <form
+          action="#"
+          method="POST"
+          id="contact-form"
+          target="customer-information"
+        >
           <p><input type="text" placeholder="お名前" /></p>
           <p><input type="email" placeholder="メールアドレス" /></p>
           <p><textarea placeholder="お問い合わせ内容"></textarea></p>
@@ -76,6 +81,7 @@
             />
           </p>
         </form>
+        <iframe name="customer-information"></iframe>
       </div>
     </main>
     <footer>
