--- a/html-kaguya/index.html
+++ b/html-kaguya/index.html
@@ -105,7 +105,7 @@
             action="#"
             method="POST"
             id="contact-form"
-            onsubmit="return false"
+            target="customer-information"
           >
             <p><input type="text" placeholder="お名前" /></p>
             <p><input type="email" placeholder="メールアドレス" /></p>
@@ -120,6 +120,7 @@
               />
             </p>
           </form>
+          <iframe name="customer-information"></iframe>
         </section>
         <section class="recruit">
           <h3>RECRUIT</h3>
