全体の校正

--- a/html-kaguya/recruit/index.html
+++ b/html-kaguya/recruit/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="descriprion" content="家具屋｜recruit 採用情報" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>家具屋　recruit</title>
+    <title>家具屋 recruit</title>
     <link rel="stylesheet" href="../css/normalize.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap"
@@ -25,17 +25,19 @@
           />
         </h1>
         <!-- ハンバーガーメニュー -->
-        <div class="navToggle">
-          <span></span><span></span><span></span>
-      </div>
+        <div class="navToggle"><span></span><span></span><span></span></div>
         <nav class="header-nav">
           <ul class="header-nav">
-          <!--  float  -->
+            <!--  float  -->
             <li><a href="../index.html" class="page-transition">HOME</a></li>
-            <li><a href="../news/index.html" class="page-transition">NEWS</a></li>
+            <li>
+              <a href="../news/index.html" class="page-transition">NEWS</a>
+            </li>
             <li><a href="index.html">RECRUIT</a></li>
             <li>
-              <a href="../contact/index.html" class="page-transition">CONTACT</a>
+              <a href="../contact/index.html" class="page-transition"
+                >CONTACT</a
+              >
             </li>
           </ul>
         </nav>
@@ -130,17 +132,19 @@
           </a>
         </div>
         <nav class="footer-nav">
-        <ul>
-          <!--  float  -->
-          <li><a href="../index.html" class="page-transition">HOME</a></li>
-          <li class="padleft-nav">
-            <a href="../news/index.html" class="page-transition">NEWS</a>
-          </li>
-          <li class="padleft-nav">RECRUIT</li>
-          <li class="padleft-nav">
-            <a href="../contact/index.html" class="page-transition">CONTACT</a>
-          </li>
-        </ul>
+          <ul>
+            <!--  float  -->
+            <li><a href="../index.html" class="page-transition">HOME</a></li>
+            <li class="padleft-nav">
+              <a href="../news/index.html" class="page-transition">NEWS</a>
+            </li>
+            <li class="padleft-nav">RECRUIT</li>
+            <li class="padleft-nav">
+              <a href="../contact/index.html" class="page-transition"
+                >CONTACT</a
+              >
+            </li>
+          </ul>
         </nav>
       </div>
       <div class="copyright">
